--- a/views/deposit.ejs
+++ b/views/deposit.ejs
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700&display=fallback"
     />
     <!-- Font Awesome -->
-    <link rel="stylesheet" href="plugins/fontawesome-free/css/all.min.css" />
+    <link rel="stylesheet" href="/plugins/fontawesome-free/css/all.min.css" />
     <!-- Ionicons -->
     <link
       rel="stylesheet"
@@ -20,26 +20,29 @@
     <!-- Tempusdominus Bootstrap 4 -->
     <link
       rel="stylesheet"
-      href="plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css"
+      href="/plugins/tempusdominus-bootstrap-4/css/tempusdominus-bootstrap-4.min.css"
     />
     <!-- iCheck -->
     <link
       rel="stylesheet"
-      href="plugins/icheck-bootstrap/icheck-bootstrap.min.css"
+      href="/plugins/icheck-bootstrap/icheck-bootstrap.min.css"
     />
     <!-- JQVMap -->
-    <link rel="stylesheet" href="plugins/jqvmap/jqvmap.min.css" />
+    <link rel="stylesheet" href="/plugins/jqvmap/jqvmap.min.css" />
     <!-- Theme style -->
-    <link rel="stylesheet" href="dist/css/adminlte.min.css" />
+    <link rel="stylesheet" href="/dist/css/adminlte.min.css" />
     <!-- overlayScrollbars -->
     <link
       rel="stylesheet"
-      href="plugins/overlayScrollbars/css/OverlayScrollbars.min.css"
+      href="/plugins/overlayScrollbars/css/OverlayScrollbars.min.css"
     />
     <!-- Daterange picker -->
-    <link rel="stylesheet" href="plugins/daterangepicker/daterangepicker.css" />
+    <link
+      rel="stylesheet"
+      href="/plugins/daterangepicker/daterangepicker.css"
+    />
     <!-- summernote -->
-    <link rel="stylesheet" href="plugins/summernote/summernote-bs4.min.css" />
+    <link rel="stylesheet" href="/plugins/summernote/summernote-bs4.min.css" />
   </head>
   <body class="hold-transition sidebar-mini layout-fixed">
     <div class="wrapper">
@@ -49,7 +52,7 @@
       >
         <img
           class="animation__shake"
-          src="dist/img/AdminLTELogo.png"
+          src="/dist/img/AdminLTELogo.png"
           alt="AdminLTELogo"
           height="60"
           width="60"
@@ -63,14 +66,14 @@
       <!-- Main Sidebar Container -->
       <aside class="main-sidebar sidebar-dark-primary elevation-4">
         <!-- Brand Logo -->
-        <a href="index3.html" class="brand-link">
+        <a href="#" class="brand-link">
           <img
-            src="dist/img/AdminLTELogo.png"
+            src="/dist/img/AdminLTELogo.png"
             alt="AdminLTE Logo"
             class="brand-image img-circle elevation-3"
             style="opacity: 0.8"
           />
-          <span class="brand-text font-weight-light">AdminLTE 3</span>
+          <span class="brand-text font-weight-light"></span>
         </a>
         <!-- Sidebar -->
         <div class="sidebar">
@@ -94,19 +97,19 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./deposit" class="nav-link">
+                <a href="/user/deposit" class="nav-link">
                   <i class="nav-icon fas fa-th"></i>
                   <p>Deposit</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./widthdraw" class="nav-link">
+                <a href="/user/withdraw" class="nav-link">
                   <i class="nav-icon fas fa-th"></i>
                   <p>Withdraw</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./grabOrder" class="nav-link">
+                <a href="/user/grab-order" class="nav-link">
                   <i class="nav-icon fas fa-th"></i>
                   <p>Grab Order</p>
                 </a>
@@ -156,16 +159,28 @@
         <!-- /.content-header -->
 
         <!-- Main content -->
-        <% users.forEach(user=>{ %>
         <section class="content">
           <div class="container-fluid">
-            <!-- content here -->
+            <div>
+              <form action="/user/deposit" method="post">
+                <label for="deposit">Enter Deposit Amount</label><br />
+                <input type="text" name="deposit" id="deposit" />
+                <button type="submit">Submit</button>
+              </form>
+            </div>
+            <div style="margin-top: 5rem">
+              <h4>Deposit Amount List</h4>
+              <div style="margin-top: 5rem">
+                <% deposits.forEach(deposit => { %>
+                <h4><span>deposited: </span>$<%-deposit.deposit%></h4>
+                <% }) %>
+              </div>
+            </div>
           </div>
           <!-- /.container-fluid -->
         </section>
         <!-- /.content -->
       </div>
-      <% }) %>
       <!-- /.content-wrapper -->
 
       <!-- Control Sidebar -->
@@ -177,42 +192,38 @@
     <!-- ./wrapper -->
 
     <!-- jQuery -->
-    <script src="plugins/jquery/jquery.min.js"></script>
+    <script src="/plugins/jquery/jquery.min.js"></script>
     <!-- jQuery UI 1.11.4 -->
-    <script src="plugins/jquery-ui/jquery-ui.min.js"></script>
+    <script src="/plugins/jquery-ui/jquery-ui.min.js"></script>
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
       $.widget.bridge("uibutton", $.ui.button);
-
-      fetch("http://localhost:3000/user/showme").then(data =>
-        console.log(data)
-      );
     </script>
     <!-- Bootstrap 4 -->
-    <script src="plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="/plugins/bootstrap/js/bootstrap.bundle.min.js"></script>
     <!-- ChartJS -->
-    <script src="plugins/chart.js/Chart.min.js"></script>
+    <script src="/plugins/chart.js/Chart.min.js"></script>
     <!-- Sparkline -->
-    <script src="plugins/sparklines/sparkline.js"></script>
+    <script src="/plugins/sparklines/sparkline.js"></script>
     <!-- JQVMap -->
-    <script src="plugins/jqvmap/jquery.vmap.min.js"></script>
-    <script src="plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
+    <script src="/plugins/jqvmap/jquery.vmap.min.js"></script>
+    <script src="/plugins/jqvmap/maps/jquery.vmap.usa.js"></script>
     <!-- jQuery Knob Chart -->
-    <script src="plugins/jquery-knob/jquery.knob.min.js"></script>
+    <script src="/plugins/jquery-knob/jquery.knob.min.js"></script>
     <!-- daterangepicker -->
-    <script src="plugins/moment/moment.min.js"></script>
-    <script src="plugins/daterangepicker/daterangepicker.js"></script>
+    <script src="/plugins/moment/moment.min.js"></script>
+    <script src="/plugins/daterangepicker/daterangepicker.js"></script>
     <!-- Tempusdominus Bootstrap 4 -->
-    <script src="plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
+    <script src="/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
     <!-- Summernote -->
-    <script src="plugins/summernote/summernote-bs4.min.js"></script>
+    <script src="/plugins/summernote/summernote-bs4.min.js"></script>
     <!-- overlayScrollbars -->
-    <script src="plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
+    <script src="/plugins/overlayScrollbars/js/jquery.overlayScrollbars.min.js"></script>
     <!-- AdminLTE App -->
-    <script src="dist/js/adminlte.js"></script>
+    <script src="/dist/js/adminlte.js"></script>
     <!-- AdminLTE for demo purposes -->
-    <script src="dist/js/demo.js"></script>
+    <script src="/dist/js/demo.js"></script>
     <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
-    <script src="dist/js/pages/dashboard.js"></script>
+    <script src="/dist/js/pages/dashboard.js"></script>
   </body>
 </html>
