--- a/views/adminDashboard.ejs
+++ b/views/adminDashboard.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Grab Order</title>
+    <title>Admin Dashboard</title>
 
     <!-- Google Font: Source Sans Pro -->
     <link
@@ -73,7 +73,7 @@
             class="brand-image img-circle elevation-3"
             style="opacity: 0.8"
           />
-          <span class="brand-text font-weight-light"></span>
+          <span class="brand-text font-weight-light">Admin</span>
         </a>
         <!-- Sidebar -->
         <div class="sidebar">
@@ -146,40 +146,123 @@
           <div class="container-fluid">
             <div class="row mb-2">
               <div class="col-sm-6">
-                <h1 class="m-0">Grab Order</h1>
+                <h1 class="m-0">Admin Dashboard</h1>
               </div>
-              <!-- /.col -->
-
-              <div class="container" style="padding: 25px">
-                <div class="item-wrapper" style="display: flex">
-                  <div class="item-image" style="margin-right: 1rem">
-                    <img style="width: 420px" src="/img/product.jpg" alt="" />
-                  </div>
-                  <div class="item-info">
-                    <h2 class="item-title">
-                      SAMSUNG 49” Odyssey G9 Gaming Monitor, 1000R Curved
-                      Screen, QLED, Dual QHD Display, 240Hz
-                    </h2>
-                    <p class="item-price">
-                      product price: <span class="value">120</span>$
-                    </p>
-                    <p class="item-quantity">
-                      quantity: <span class="value">1</span>pcs
-                    </p>
-                    <p class="commission">
-                      commission on order: <span class="value">15</span>$
-                    </p>
-                    <p class="expected-return">
-                      expected return: <span class="value">135</span>$
-                    </p>
-                    <button class="order-btn">complete order</button>
-                  </div>
-                </div>
-              </div>
-
-              <!-- /.col -->
             </div>
-            <!-- /.row -->
+            <div
+              style="border: 1px solid black; padding: 5px; width: max-content"
+            >
+              <h3>Transfer funds to an user</h3>
+              <form action="">
+                <div>
+                  <label for="amount">Enter amount</label><br />
+                  <input type="text" name="amout" id="amount" />
+                </div>
+                <div>
+                  <label for="user-name">Enter user name</label><br />
+                  <input type="text" name="user-name" id="user-name" />
+                </div>
+                <button type="submit" style="margin-top: 5px">Confirm</button>
+              </form>
+            </div>
+            <!-- withdrawal requests -->
+            <div
+              style="
+                padding: 5px;
+                border: 1px solid black;
+                margin-top: 25px;
+                width: max-content;
+              "
+            >
+              <h1>Withdrawal Requests</h1>
+              <div style="display: flex">
+                <p
+                  style="
+                    padding: 5px 25px;
+                    border: 1px solid black;
+                    margin: 0 25px;
+                  "
+                >
+                  User Name
+                </p>
+                <p
+                  style="
+                    padding: 5px 25px;
+                    border: 1px solid black;
+                    margin: 0 25px;
+                  "
+                >
+                  Amount
+                </p>
+                <p
+                  style="
+                    padding: 5px 25px;
+                    border: 1px solid black;
+                    margin: 0 25px;
+                  "
+                >
+                  Time/Date
+                </p>
+                <p
+                  style="
+                    padding: 5px 25px;
+                    border: 1px solid black;
+                    margin: 0 25px;
+                  "
+                >
+                  status
+                </p>
+              </div>
+            </div>
+            <!-- Deposit Request -->
+            <div
+              style="
+                padding: 5px;
+                border: 1px solid black;
+                margin-top: 25px;
+                width: max-content;
+              "
+            >
+              <h1>Deposit Requests</h1>
+              <div style="display: flex">
+                <p
+                  style="
+                    padding: 5px 25px;
+                    border: 1px solid black;
+                    margin: 0 25px;
+                  "
+                >
+                  User Name
+                </p>
+                <p
+                  style="
+                    padding: 5px 25px;
+                    border: 1px solid black;
+                    margin: 0 25px;
+                  "
+                >
+                  Amount
+                </p>
+                <p
+                  style="
+                    padding: 5px 25px;
+                    border: 1px solid black;
+                    margin: 0 25px;
+                  "
+                >
+                  Time/Date
+                </p>
+                <p
+                  style="
+                    padding: 5px 25px;
+                    border: 1px solid black;
+                    margin: 0 25px;
+                  "
+                >
+                  status
+                </p>
+              </div>
+            </div>
           </div>
           <!-- /.container-fluid -->
         </div>
@@ -187,9 +270,7 @@
 
         <!-- Main content -->
         <section class="content">
-          <div class="container-fluid">
-            <!-- Small boxes (Stat box) -->
-          </div>
+          <div class="container-fluid"></div>
           <!-- /.container-fluid -->
         </section>
         <!-- /.content -->
