--- a/views/userDashboard.ejs
+++ b/views/userDashboard.ejs
@@ -99,13 +99,13 @@
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./deposit" class="nav-link">
+                <a href="/user/deposit" class="nav-link">
                   <i class="nav-icon fas fa-th"></i>
                   <p>Deposit</p>
                 </a>
               </li>
               <li class="nav-item">
-                <a href="./widthdraw" class="nav-link">
+                <a href="/user/withdraw" class="nav-link">
                   <i class="nav-icon fas fa-th"></i>
                   <p>Withdraw</p>
                 </a>
